@@ -1,5 +1,25 @@
 package com.github.zhengframework.jdbc.wrapper;
 
+/*-
+ * #%L
+ * zheng-jdbc
+ * %%
+ * Copyright (C) 2020 Zheng MingHai
+ * %%
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * #L%
+ */
+
 import com.github.zhengframework.jdbc.DataSourceConfig;
 import com.google.inject.Injector;
 import java.util.Objects;
@@ -10,12 +30,11 @@ public class DataSourceWrapperFactory {
 
   public DataSourceWrapper create(DataSourceConfig dataSourceConfig, Injector injector)
       throws Exception {
-    Class<? extends DataSourceWrapper> dataSourceWrapperClass = dataSourceConfig
-        .getDataSourceWrapperClass();
+    Class<? extends DataSourceWrapper> dataSourceWrapperClass =
+        dataSourceConfig.getDataSourceWrapperClass();
     log.info("dataSourceWrapperClass={}", dataSourceWrapperClass);
-    DataSourceWrapper dataSourceWrapper = Objects
-        .requireNonNull(dataSourceWrapperClass).getConstructor()
-        .newInstance();
+    DataSourceWrapper dataSourceWrapper =
+        Objects.requireNonNull(dataSourceWrapperClass).getConstructor().newInstance();
     dataSourceWrapper.setDataSourceConfig(dataSourceConfig);
     injector.injectMembers(dataSourceWrapper);
     dataSourceWrapper.init();
